Tests bison + javaDoc : finis