@@ -1,9 +1,6 @@
 package com.example.chocosolver.input_reader;
 
-import com.example.chocosolver.problem.Pair;
-import com.example.chocosolver.problem.Problem;
-import com.example.chocosolver.problem.Term;
-import com.example.chocosolver.problem.Variable;
+import com.example.chocosolver.problem.*;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -22,38 +19,52 @@ public class TestLexer {
     public void testVariableSet() throws IOException {
         String script = "A dans {1, 2};";
         var p = Choco.parse(script);
-        assertNotNull(p);
-        //TODO
-        System.out.println(p);
+        assert p != null;
+        assertEquals(p.getVariables().get("A").getName(), "A");
+        assertNull(p.getVariables().get("A").getValueInterval());
+        assertNotNull(p.getVariables().get("A").getValueSet());
+        assertTrue(p.getVariables().get("A").getValueSet().contains(1));
+        assertTrue(p.getVariables().get("A").getValueSet().contains(2));
     }
 
     @Test
     public void testVariableInterval() throws IOException {
         String script = "A dans [1, 2];";
         var p = Choco.parse(script);
-        assertNotNull(p);
-        //TODO
-        System.out.println(p);
-    }
-
-    @Test
-    public void testConstraintInf1() throws IOException {
-        String script = "0 < 1;";
-        var p = Choco.parse(script);
-        assertEquals(p.getConstraints().get(0).getTerm1().getValue(), 0);
-        assertEquals(p.getConstraints().get(0).getTerm2().getValue(), 1);
-
-        System.out.println(p);
+        assert p != null;
+        assertEquals(p.getVariables().get("A").getName(), "A");
+        assertNull(p.getVariables().get("A").getValueSet());
+        assertNotNull(p.getVariables().get("A").getValueInterval());
+        assertEquals(p.getVariables().get("A").getValueInterval().getFirst(), 1);
+        assertEquals(p.getVariables().get("A").getValueInterval().getSecond(), 2);
     }
 
     @Test
     public void testConstraintSup() throws IOException {
-        String script = "A + 2 > 1;";
+        String script = "B + 2 > 1;";
         var p = Choco.parse(script);
 
-        System.out.println(p);
+        assertNotNull(p);
+        assertNotNull(p.getVariables());
+        assertNotNull(p.getConstraints());
+        assertEquals(p.getConstraints().size(), 1);
 
-        System.out.println(p);
+        Constraint constraint = p.getConstraints().get(0); //B + 2 > 1
+        Term term1 = constraint.getTerm1(); //B + 2
+        Term term2 = constraint.getTerm2(); //1
+        Relation relation = constraint.getRelation(); //>
+
+        assertEquals(term1.getTerms().get(0).getVariable().getName(), "B");
+        assertEquals(term1.getTerms().get(1).getValue(), 2);
+        assertEquals(term1.getOperator(), Operator.ADD);
+
+        assertEquals(term2.getValue(), 1);
+
+        assertEquals(relation, Relation.SUPERIOR);
+
+
+
+
     }
 }
 
